Fix misaligned div in iOS

--- a/src/system/ui/upload/style.scss
+++ b/src/system/ui/upload/style.scss
@@ -5,8 +5,8 @@
 }
 
 .fl-asst-file-drop-content-view {
-
-	display: block
+	display: flex;
+	flex: 1 1 auto;
 }
 
 .fl-asst-file-drop-dragging-view {
